<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#346E6D"
    android:padding="5dp"
    tools:context=".colorSetting">


    <TextView
        android:id="@+id/textView_for_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupForSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupForSettings"
        android:layout_width="373dp"
        android:layout_height="108dp"
        android:clickable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/RadioOne"
            android:layout_width="123dp"
            android:layout_height="112dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/radio_button_custom"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text="@string/red" />

        <RadioButton
            android:id="@+id/RadioTwo"
            android:layout_width="125dp"
            android:layout_height="112dp"
            android:background="@drawable/radio_button_custom"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/Yellow" />

        <RadioButton
            android:id="@+id/RadioThree"
            android:layout_width="139dp"
            android:layout_height="112dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/radio_button_custom"
            android:backgroundTint="@color/green"
            android:text="@string/green" />


    </RadioGroup>

    <Button
        android:id="@+id/changeColorButton"
        android:layout_width="267dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button"
        android:text="@string/changeColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupForSettings" />


</androidx.constraintlayout.widget.ConstraintLayout>