<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#346E6D"
    android:padding="5dp"
    tools:context=".GameOver">


    <TextView
        android:id="@+id/textView_winning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Game_over"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="242dp"
        android:layout_height="198dp"
        android:src="@drawable/winning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <TextView
        android:id="@+id/textView_moveCount"
        android:layout_width="375dp"
        android:layout_height="65dp"
        android:fontFamily="serif-monospace"
        android:text="@string/moveAmount"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/textView_moveNumber"
        android:layout_width="375dp"
        android:layout_height="65dp"
        android:fontFamily="serif-monospace"
        android:text="@string/moveAmountNumber"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_moveCount"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>